# Twitter2Instagram

./: .breakpoints  .gitmodules  README.md  credentials.py  fetch_tweets.py  main.py  post_on_instagram.py  pyproject.toml  tweets.csv
PostOnInstagram/: README.md  post_on_instagram.py
tweet_lists/: tweets.csv  tweets1.csv  tweets2.csv  tweets3.csv  tweets4.csv  tweets5.csv  tweets_JanuWaran_6701_30_2021-11-14_21-08-54.csv  tweets_matze_emmo_6701_1000_2021-11-16_13:22:30.csv
tweet_lists/JanuWaran/: tweets_JanuWaran_6701_20_2021-11-23_15-58-05.csv  tweets_JanuWaran_6701_25_2021-11-23_17-20-54.csv
