[tool.poetry]
name = "repl_python3_Twitter-to-Instagram"
version = "0.1.0"
description = ""
authors = ["EinGuterWaran <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
tweepy = "^4.3.0"
GetOldTweets3 = "^0.0.11"
bs4 = "^0.0.1"
opencv-python = "^4.5.4"
pilmoji = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
